@@ -4561,7 +4561,7 @@ init_ctypes(void)
    ob_type is the metatype (the 'type'), defaults to PyType_Type,
    tp_base is the base type, defaults to 'object' aka PyBaseObject_Type.
 */
-#ifdef WITH_THREADS
+#ifdef WITH_THREAD
 	PyEval_InitThreads();
 #endif
 	m = Py_InitModule3("_ctypes", module_methods, module_docs);
