@@ -28,6 +28,9 @@ Extension Modules
 - Bug #1467450: On Mac OS X 10.3, RTLD_GLOBAL is now used as the
   default mode for loading shared libraries in ctypes.
 
+- Because of a misspelled preprocessor symbol, ctypes was always
+  compiled without thread support; this is now fixed.
+
 What's New in Python 2.5 beta 2?
 ================================
 
